[tool.poetry]
name = "fastapi-laser"
version = "0.1.0"
description = "FastAPI LASER"
authors = ["Tech <tech@settle.eu>"]
license = "MIT"
packages = [
    { include = "fastapi_laser", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {version = "^0.88.0", extras = ["all"]}
loguru = "^0.5.3"
SQLAlchemy = "^1.4.22"
alembic = "^1.5.1"
google-cloud-logging = "^2.1.1"

[tool.poetry.dev-dependencies]
# https://python-poetry.org/docs/dependency-specification
# TEST: Uncomment to include the current app in editable install mode
flake8 = "^3.8.4"
pylint = "^2.6.0"
black = "^21.12b0"
isort = "^5.6.4"
autoflake = "^1.4"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
db-migrations = "app.database.migrations.cli:cli"
probe-db = "app.probes:db_health_check"
